# mprpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: logger.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpcapplication.h  rpcheader.pb.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
